--- a/platform/ingress-nginx/application-ingress.yml
+++ b/platform/ingress-nginx/application-ingress.yml
@@ -5,15 +5,17 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://github.com/Gagandeepsingh9/platform-gitops
-    path: platform/ingress-nginx/
+  sources:
+  - repoURL: https://kubernetes.github.io/ingress-nginx
+    chart: ingress-nginx
+    targetRevision: 4.13.0
     helm:
-      repoURL: https://kubernetes.github.io/ingress-nginx
-      chart: ingress-nginx
-      targetRevision: 4.10.0
       valueFiles:
-        - values-ingress.yml
+      - $values/platform/ingress-nginx/values-ingress.yml
+
+  - repoURL: https://github.com/Gagandeepsingh9/platform-gitops
+    targetRevision: main
+    ref: values
   
   destination:
     server: https://kubernetes.default.svc
