--- a/platform/prometheus-grafana/application-pg.yml
+++ b/platform/prometheus-grafana/application-pg.yml
@@ -6,13 +6,15 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/Gagandeepsingh9/platform-gitops
-    path: platform/prometheus-grafana/
+  - repoURL: https://prometheus-community.github.io/helm-charts
+    chart: prometheus
     helm:
-      repoURL: https://prometheus-community.github.io/helm-charts
-      chart: prometheus
       valueFiles:
-        - values-pg.yml
+      - $values/platform/prometheus-grafana/values-pg.yml
+
+  - repoURL: https://github.com/Gagandeepsingh9/platform-gitops
+    targetRevision: main
+    ref: values
 
   destination:
     server: https://kubernetes.default.svc
