--- a/platform/prometheus-grafana/application-pg.yml
+++ b/platform/prometheus-grafana/application-pg.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: Prometheus-grafana
+  name: prometheus-grafana
   namespace: argocd
 spec:
   project: default
