--- a/apps/application-pg.yml
+++ b/apps/application-pg.yml
@@ -8,6 +8,7 @@ spec:
   sources:
   - repoURL: https://prometheus-community.github.io/helm-charts
     chart: prometheus
+    targetRevision: 27.48.0
     helm:
       valueFiles:
       - $values/platform/prometheus-grafana/values-pg.yml
