--- a/apps/application-pg.yml
+++ b/apps/application-pg.yml
@@ -7,8 +7,8 @@ spec:
   project: default
   sources:
   - repoURL: https://prometheus-community.github.io/helm-charts
-    chart: prometheus
-    targetRevision: 27.48.0
+    chart: kube-prometheus-stack
+    targetRevision: 80.13.3
     helm:
       valueFiles:
       - $values/platform/prometheus-grafana/values-pg.yml
