--- a/platform/prometheus-grafana/values-pg.yml
+++ b/platform/prometheus-grafana/values-pg.yml
@@ -1,3 +1,11 @@
+prometheusOperator:
+  admissionWebhooks:
+    enabled: false
+    patch:
+      enabled: false
+  tls:
+    enabled: false
+    
 prometheus:
   prometheusSpec:
     storageSpec: 
